# spec-kit-docs

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: critical-rules.xml
.claude/commands/: doc-init.md  doc-update.md
.claude/skills/git-commit/: README.md  SKILL.md
.claude/skills/git-commit/examples/: good_commits.md
.claude/skills/git-commit/scripts/: analyze_diff.py  classify_type.py
.claude/skills/git-commit/templates/: project_config.json
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/scripts/docs/: doc_init.py  doc_update.py
specs/001-draft-init-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks-session-2025-10-17-update.md  tasks.md
specs/001-draft-init-spec/checklists/: compliance.md  consistency.md  document-generation-quality.md  llm-transform.md  requirements.md
specs/001-draft-init-spec/contracts/: cli-interface.md  file-formats.md  handle_dependencies.md  llm-integration.md
src/spec_kit_docs/: __init__.py
src/speckit_docs/: __init__.py  doc_init.py  doc_update.py  exceptions.py  llm_entities.py  models.py
src/speckit_docs/cli/: __init__.py  install_handler.py
src/speckit_docs/commands/: doc-init.md  doc-update.md  speckit.doc-init.md  speckit.doc-update.md
src/speckit_docs/generators/: __init__.py  base.py  document.py  feature_page.py  mkdocs.py  navigation.py  sphinx.py
src/speckit_docs/parsers/: __init__.py  document.py  document_structure.py  feature_scanner.py  markdown_parser.py
src/speckit_docs/scripts/: __init__.py  doc_init.py  doc_update.py
src/speckit_docs/templates/: feature-page.md.jinja2
src/speckit_docs/templates/mkdocs/: index.md.j2  mkdocs.yml.j2
src/speckit_docs/templates/sphinx/: Makefile.j2  conf.py.j2  index.md.j2
src/speckit_docs/utils/: __init__.py  cache.py  dependencies.py  feature_discovery.py  git.py  llm_transform.py  logging.py  prompts.py  spec_extractor.py  template.py  validation.py
tests/: __init__.py  conftest.py
tests/contract/: __init__.py  test_doc_init_output.py  test_doc_update_command.py
tests/fixtures/sample_docs/: inconsistent_quickstart.md  inconsistent_readme.md  valid_quickstart.md  valid_readme.md
tests/fixtures/sample_specs/: english_spec.md  large_spec.md  malformed_spec.md  missing_section_spec.md  no_scope_spec.md  no_stories_spec.md  valid_spec.md
tests/integration/: __init__.py  test_doc_init_dependency_groups.py  test_doc_init_no_pyproject.py  test_doc_init_no_uv.py  test_doc_init_optional_dependencies.py  test_doc_init_uv_add_failed.py  test_doc_init_with_dependencies.py  test_install.py  test_llm_transform.py  test_mkdocs_workflow.py  test_readme_quickstart_integration.py  test_spec_extraction.py  test_sphinx_workflow.py
tests/performance/: test_update_performance.py
tests/unit/: __init__.py  test_dependency_result.py  test_dependency_target.py  test_exceptions.py  test_generators.py  test_llm_entities.py  test_models.py  test_package_manager.py
tests/unit/cli/: test_cli.py  test_install_handler.py
tests/unit/generators/: test_base.py  test_document.py  test_feature_page.py  test_mkdocs.py  test_navigation.py  test_sphinx.py
tests/unit/parsers/: __init__.py  test_document.py  test_document_structure.py  test_feature_scanner.py  test_markdown_parser.py
tests/unit/scripts/: test_doc_init.py  test_doc_update.py  test_incremental_update.py
tests/unit/utils/: test_cache.py  test_detect_package_managers.py  test_feature_discovery.py  test_get_required_packages.py  test_git.py  test_handle_dependencies.py  test_handle_dependencies_with_target.py  test_llm_transform_phase2.py  test_logging.py  test_prompts.py  test_spec_extractor.py  test_template.py  test_validation.py
